fix align self

--- a/app/css/variable/config/_grid.styl
+++ b/app/css/variable/config/_grid.styl
@@ -37,11 +37,14 @@
 .f-jcfs
 	justify-content flex-start
 
-.alignSelf-fs
+.f-asfs
 	align-self: flex-start
 
-.alignSelf-fe
+.f-asfe
 	align-self: flex-end
+
+.f-asc
+	align-self: center
 
 .f-grow
 	flex-grow 1
